--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,8 @@
+html { 
+    --z-primary-color: #3A7;
+    --z-secondary-color: #889;
+}
+
 *, *:before, *:after {
     box-sizing: border-box;
     margin: 0;
