--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,4 +1,4 @@
-html { 
+:root { 
     --z-primary-color: #3A7;
     --z-secondary-color: #889;
 }
@@ -34,4 +34,31 @@ z-checkbox,
 z-toggle,
 z-radio {
     display: block;
+}
+
+pre {
+    margin: 1rem 0;
+    position: relative;
+
+    &[data-lang] {
+        &:before {
+            content: attr(data-lang);
+            font-size: x-small;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: silver;
+            padding: .25rem 1rem;
+            border-bottom-right-radius: .25rem;
+        }
+    
+        .hljs {
+            padding: 2rem 1rem 1rem;
+        }
+    }
+
+    .hljs {
+        padding: 1rem;
+        font-size: small;
+    }
 }
