Add Home page & page design

--- a/src/html/base.njk
+++ b/src/html/base.njk
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Z-Web-Components</title>
     <link rel="stylesheet" href="./css/main.scss">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700;900&family=Sedgwick+Ave">
 </head>
 <body>
     <header>
