--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,10 @@
 
 {% block main %}
     <z-tab-group centered>
+        <z-tab label="Quick start">
+            {% include "./html/partials/home.njk" %}
+        </z-tab>
+
         <z-tab label="Input">
             {% include "./html/partials/input.njk" %}
         </z-tab>
