--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,64 +1,4 @@
-:root { 
-    --z-primary-color: #3A7;
-    --z-secondary-color: #889;
-}
-
-*, *:before, *:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: sans-serif;
-}
-
-hr {
-    margin: 4rem 1rem;
-    border: none;
-    border-bottom: .1rem solid silver;
-}
-
-.container {
-    width: 100%;
-    max-width: 640px;
-    padding: 1rem;
-    margin: 0 auto;
-}
-
-.text-center {
-    text-align: center;
-}
-
-z-checkbox,
-z-toggle,
-z-radio {
-    display: block;
-}
-
-pre {
-    margin: 1rem 0;
-    position: relative;
-
-    &[data-lang] {
-        &:before {
-            content: attr(data-lang);
-            font-size: x-small;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: silver;
-            padding: .25rem 1rem;
-            border-bottom-right-radius: .25rem;
-        }
-    
-        .hljs {
-            padding: 2rem 1rem 1rem;
-        }
-    }
-
-    .hljs {
-        padding: 1rem;
-        font-size: small;
-    }
-}
+@import './variables';
+@import './reset';
+@import './helpers';
+@import './custom';
