--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,8 +1,15 @@
 $green: #3A7;
-$gray: #666;
+$gray: #999;
 $red: #D22;
+$orange: #F95;
 
 $site-width: 1024px;
+
+$normal-font: 'Raleway', sans-serif;
+$monospace-font: monospace;
+$funny-font: 'Sedgwick Ave', cursive;
+
+$box-shadow: 0 0 .5rem rgba(black, .3);
 
 // CSS Variables
 :root {
