--- a/src/html/base.njk
+++ b/src/html/base.njk
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-Web-Components</title>
+    <title>Z Web Components</title>
     <link rel="stylesheet" href="./css/main.scss">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700;900&family=Sedgwick+Ave">
 </head>
@@ -21,10 +21,11 @@
     <footer>
         <div class="container text-center">
             <small>
-                &copy; <a href="https://benjamin.caradeuc.info">Benjamin Caradeuc</a> 2020
+                Made with <span style="color: var(--z-danger-color); font-size: 1.5rem;">&#10084;</span> by <a href="https://benjamin.caradeuc.info/">Benjamin Caradeuc</a>
             </small>
         </div>
     </footer>
+    
     <script src="./js/main.js"></script>
 </body>
 </html>
