--- a/src/html/partials/tab.njk
+++ b/src/html/partials/tab.njk
@@ -1,5 +1,7 @@
-{% set ex1 = 
-'<z-tab-group>
+{% from "../macros/example.njk" import example %}
+
+{% set minimalExample %}
+<z-tab-group>
     <z-tab label="tab-1">
         Lorem ipsum dolor <a href="https://benjamin.caradeuc.info">sit</a> amet consectetur adipisicing elit. Suscipit, facere!
     </z-tab>
@@ -11,22 +13,62 @@
     <z-tab label="tab-3">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi iste numquam nobis sunt repellendus doloremque inventore, reiciendis at. Dolore, at. Mollitia voluptatem, officia rerum repudiandae ex aperiam totam. Harum?
     </z-tab>
-</z-tab-group>' %}
+</z-tab-group>
+{% endset%}
+
+{% set verticalExample %}
+<z-tab-group vertical>
+    <z-tab label="tab-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
+    <z-tab label="tab-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
+</z-tab-group>
+{% endset %}
+
+{% set centeredExample %}
+<z-tab-group centered>
+    <z-tab label="tab-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
+    <z-tab label="tab-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
+</z-tab-group>
+
+<z-tab-group centered vertical>
+    <z-tab label="tab-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae ab mollitia nobis consequatur, temporibus quam sunt voluptatibus! Et adipisci maiores, minima fugiat pariatur reprehenderit similique asperiores accusantium laudantium beatae modi eligendi quos molestiae doloremque officia! Dolorum ab placeat eligendi? Sit a voluptatum dignissimos sapiente, quo amet molestiae in perspiciatis consequuntur accusamus inventore omnis ad repellendus, facilis, tempora maxime ea harum? Doloribus cupiditate explicabo veniam distinctio non dolor labore quas asperiores, perferendis, iusto maiores nisi inventore nulla incidunt corporis nihil deserunt nostrum culpa quia, perspiciatis assumenda facilis. Temporibus vel sapiente beatae optio laboriosam soluta aliquid natus quaerat amet iste sed asperiores eligendi, exercitationem delectus tenetur quasi eos tempore blanditiis possimus id, placeat vero. Dolore dolor laborum modi sunt vitae. Incidunt, culpa hic repellendus molestias ullam quo a quas rerum quisquam illo est eius, quaerat laboriosam magnam rem iusto ex in alias, ratione saepe. Vel voluptatem alias molestias minus dolore veritatis modi autem quis odit. Esse voluptatem, neque asperiores quam itaque deserunt totam et inventore! Ex maiores error aliquam maxime vel perspiciatis mollitia adipisci odit itaque eveniet molestias eius, libero veritatis. Veniam, esse alias nisi beatae vero minus corrupti numquam ab culpa eos impedit deserunt quos sequi vitae libero consectetur voluptatem? Ipsa natus hic facilis dignissimos vitae, rerum inventore doloremque eaque fugiat et quo itaque necessitatibus tempora, obcaecati distinctio impedit tenetur dolorem aspernatur placeat molestias atque enim. Molestias quidem fugit quas quos, quia praesentium ex, explicabo tempora consectetur, deserunt placeat autem sapiente. A tempora sequi, ullam consectetur cum magni nemo? Dicta voluptatem laborum ipsa facilis porro aperiam corrupti repellendus ex pariatur excepturi. Nostrum libero earum repellendus quae eum repudiandae amet vel numquam quasi neque velit labore, sequi tempora accusamus debitis reiciendis impedit eaque consequatur illum placeat voluptates delectus corrupti. Tenetur consequatur, sit ab vel sapiente necessitatibus culpa magni voluptatem aliquid minima rerum.</z-tab>
+    <z-tab label="tab-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
+</z-tab-group>
+{% endset %}
 
 <div class="container">
-    <h2>Tabs</h2>
+    <h2>Tab-group & Tab</h2>
 
-    <pre data-lang="html"><code class="lang-html">{{ ex1 | escape }}</code></pre>
+    <p><code>{{ '<z-tab-group>' | escape }}</code> is a component that displays <code>{{ '<z-tab>' | escape }}</code> components one at a time, and adds a menu so that you can choose which one to display.</p>
+    <code>{{ '<z-tab>' | escape }}</code> is a component that wraps its content so that the <code>{{ '<z-tab-group>' | escape }}</code> can retreive it.</p>
 
-    <z-tab-group>
-        <z-tab label="tab-1">Lorem ipsum dolor <a href="https://benjamin.caradeuc.info">sit</a> amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
-        <z-tab label="tab-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
-        <z-tab label="tab-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea modi iste numquam nobis sunt repellendus doloremque inventore, reiciendis at. Dolore, at. Mollitia voluptatem, officia rerum repudiandae ex aperiam totam. Harum?</z-tab>
-    </z-tab-group>
+    {{ example(template=minimalExample, about="Basic tabs") }}
 
-    <z-tab-group vertical centered>
-        <z-tab label="tab-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, facere!</z-tab>
-        <z-tab label="tab-2" active>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, delectus minima nulla sed magni facilis tempore ipsam laborum quam maxime.</z-tab>
-        <z-tab label="tab-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus natus incidunt nam, nemo odit quisquam ipsum! Id odit ab vitae cumque iure? Quae, eos ab eius quo, architecto voluptates repellat expedita, iure praesentium rerum asperiores est tenetur! Corporis, nobis! Officia, provident. Alias repudiandae expedita, deleniti quisquam facilis laudantium debitis qui, quaerat optio quod, quo saepe nulla rem ad assumenda explicabo sequi culpa itaque at reprehenderit perspiciatis veritatis error exercitationem. Similique necessitatibus cum tempora a, consequatur beatae quo vitae accusamus ab ad unde tempore cupiditate voluptatem eos repellat atque pariatur quae corporis. Assumenda nostrum nisi vel, ab rerum provident! Numquam officia, cupiditate quasi quam debitis ullam quas molestiae ipsum vel. Placeat voluptatem sit suscipit ab reprehenderit et iusto dolorum, temporibus optio molestias recusandae eligendi ad ipsa vitae, asperiores accusantium voluptas quasi obcaecati, saepe debitis rem aliquam quia ipsum. Voluptatem, excepturi recusandae! Ullam a aut ex id ab atque labore laborum molestias, accusamus, animi facilis. Mollitia adipisci provident eligendi, nisi nulla consequatur beatae autem dicta! Mollitia aliquam ab ea minima? Nam, est laboriosam soluta perferendis optio excepturi ipsa quas odit. Aliquid corrupti error minus dolor quod ullam quia illo corporis minima id quam quibusdam labore soluta tenetur, sequi reiciendis eius beatae blanditiis quos necessitatibus a ratione dicta quo aliquam! Quasi delectus minima eos! Quibusdam iure dolor, molestiae facere rem praesentium, fuga ut, dolore nam eius est minima! Illum, cum, itaque nobis cupiditate numquam architecto molestias adipisci ex culpa, deserunt odit excepturi reiciendis asperiores minima saepe earum quibusdam delectus provident pariatur doloremque! Rem labore facilis quos modi laudantium distinctio debitis. Excepturi distinctio ducimus doloribus consequuntur vero a itaque ab laboriosam reiciendis quos tenetur nobis, voluptatem dolorum? Rem fuga distinctio impedit rerum accusantium esse sunt libero voluptatem aspernatur exercitationem, nesciunt ab repellat unde dolore amet veniam voluptatum ipsum quas explicabo. Eos iure error assumenda!</z-tab>
-    </z-tab-group>
+    <hr>
+    <h3>Attributes</h3>
+
+    <h4>Vertical (z-tab-group)</h4>
+
+    <p>The <b>vertical</b> attribute changes the layout of the tabs menu by putting it to the left instead of the top of the tab group.</p>
+
+    {{ example(template=verticalExample, about="Vertical tabs menu") }}
+
+    <h4>Centered (z-tab-group)</h4>
+
+    <p>The <b>centered</b> attribute changes the layout of the tabs menu by making it centered (horizontaly or verticaly)</p>
+
+    {{ example(template=centeredExample, about="Centered tab menu") }}
+
+    <h4>Label (z-tab)</h4>
+
+    <p>The <b>label</b> attribute is used to build the menu and provides a clickable button to show the corresponding tab.</p>
+
+    <hr>
+    <h3>Accessibility</h3>
+
+    <p>Soon...</p>
+
+    <hr>
+    <h3>Events</h3>
+
+    <p>Soon...</p>
 </div>
