--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,9 +1,11 @@
 $green: #3A7;
 $gray: #999;
+$silver: #eee;
 $red: #D22;
 $orange: #F95;
 
-$site-width: 1024px;
+$site-width: 720px;
+$menu-width: 250px;
 
 $normal-font: 'Raleway', sans-serif;
 $monospace-font: monospace;
