--- a/src/toggle.njk
+++ b/src/toggle.njk
@@ -1,10 +1,10 @@
 {% extends "./html/base.njk" %}
 
 {% block nav %}
-    {% set selected = 'home' %}
+    {% set selected = 'toggle' %}
     {% include "./html/partials/navigation.njk" %}
 {% endblock %}
 
 {% block main %}
-    {% include "./html/pages/home.njk" %}
+    {% include "./html/pages/toggle.njk" %}
 {% endblock %}
