--- a/src/css/_helpers.scss
+++ b/src/css/_helpers.scss
@@ -19,7 +19,7 @@ pre {
             position: absolute;
             top: 0;
             left: 0;
-            background-color: silver;
+            background-color: $silver;
             padding: .25rem 1rem;
             border-bottom-right-radius: .25rem;
             font-variant: small-caps;
