--- a/src/input.njk
+++ b/src/input.njk
@@ -1,10 +1,10 @@
 {% extends "./html/base.njk" %}
 
 {% block nav %}
-    {% set selected = 'home' %}
+    {% set selected = 'input' %}
     {% include "./html/partials/navigation.njk" %}
 {% endblock %}
 
 {% block main %}
-    {% include "./html/pages/home.njk" %}
+    {% include "./html/pages/input.njk" %}
 {% endblock %}
