--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,6 @@
 @import 'highlight.js/styles/vs2015.css';
 @import './variables';
 @import './reset';
+@import './layout';
 @import './helpers';
 @import './custom';
