--- a/src/html/base.njk
+++ b/src/html/base.njk
@@ -16,6 +16,7 @@
 
     <main>
         <aside>
+            <button class="toggle-menu">&#9776;&nbsp;menu</button>
             {% block nav %}{% endblock %}
         </aside>
         
