--- a/src/html/pages/radio.njk
+++ b/src/html/pages/radio.njk
@@ -21,6 +21,18 @@
 </z-radio-group>
 {% endset %}
 
+{% set checkedExample %}
+<z-radio-group>
+    <z-radio label="radio input checked" value="1" checked></z-radio>
+    <z-radio label="radio input" value="2"></z-radio>
+</z-radio-group>
+
+<z-radio-group value="2">
+    <z-radio label="radio input checked" value="1" checked></z-radio>
+    <z-radio label="radio input" value="2"></z-radio>
+</z-radio-group>
+{% endset %}
+
 {% set rightExample %}
 <z-radio-group>
     <z-radio label="radio input 1 right" value="1" right></z-radio>
@@ -65,6 +77,17 @@
     <p>When set on the <code>{{ '<z-radio-group>' | escape }}</code> component, it acts as a default value.</p>
 
     {{ example(template=valueExample, about="radio group and radio value") }}
+
+    <h4>Checked (z-radio)</h4>
+
+    <p>The <b>checked</b> attribute is watched and makes the radio beeing checked if provided (no value needed).</p>
+    <p>This attribute can also be used for setting a default value to the <code>{{ '<z-radio-group>' | escape }}</code> component.</p>
+    
+    <div class="notif warn">
+        The <b>checked</b> attribute will not be used if a <b>value</b> attribute exists on its parent <code>{{ '<z-radio-group>' | escape }}</code> component.
+    </div>
+
+    {{ example(template=checkedExample, about="radio checked") }}
     
     <h4>Label (z-radio)</h4>
 
