Make use of the z-change event

--- a/src/html/partials/theme-switcher.njk
+++ b/src/html/partials/theme-switcher.njk
@@ -1,10 +1,10 @@
 {% set themes = [
-    { name: 'dark-green', value: '#3A7' },
-    { name: 'light-green', value: '#7A3' },
-    { name: 'blue', value: '#37A' },
-    { name: 'purple', value: '#73A' },
-    { name: 'pink', value: '#A37' },
-    { name: 'orange', value: '#A73' }
+    { name: 'dark-green', value: '#33AA77' },
+    { name: 'light-green', value: '#77AA33' },
+    { name: 'blue', value: '#3377AA' },
+    { name: 'purple', value: '#7733AA' },
+    { name: 'pink', value: '#AA3377' },
+    { name: 'orange', value: '#AA7733' }
 ] %}
 
 <div class="theme-switcher">
