--- a/src/html/pages/home.njk
+++ b/src/html/pages/home.njk
@@ -50,9 +50,9 @@
     <p>Get started with <b>z-web-components</b>, an opinionated set of web components for building strong and fast applications.</p>
 
     <hr>
-    <h3>Installation</h3>
+    <h3 id="installation">Installation</h3>
 
-    <h4>Via package manager</h4>
+    <h4 id="installation-package-manager">Via package manager</h4>
 
     <p>Install <b>z-web-components</b> into nearly any project with some of the most popular package managers.</p>
 
@@ -69,21 +69,21 @@
 
     <pre><code class="lang-javascript">import 'z-web-components'</code></pre>
 
-    <h4>Via CDN</h4>
+    <h4 id="installation-cdn">Via CDN</h4>
 
     <p>You can also use any cdn provider that mirrors npm packages.</p>
 
     <pre data-about="Via cdn"><code class="lang-html">{{ cdn | trim | escape }}</code></pre>
     
     <hr>
-    <h3>Usage</h3>
+    <h3 id="usage">Usage</h3>
 
     <p>Use the elements in your website (more info on the individual documentation pages).</p>
 
     <pre><code class="lang-html">{{ createElements | trim | escape }}</code></pre>
 
     <hr>
-    <h3>Customisation</h3>
+    <h3 id="customisation">Customisation</h3>
 
     <p>You can customize some colors via css variables.</p>
 
