--- a/src/html/pages/tab.njk
+++ b/src/html/pages/tab.njk
@@ -44,31 +44,31 @@
     {{ example(template=minimalExample, about="Basic tabs") }}
 
     <hr>
-    <h3>Attributes</h3>
+    <h3 id="attributes">Attributes</h3>
 
-    <h4>Vertical (z-tab-group)</h4>
+    <h4 id="attributes-vertical">Vertical (z-tab-group)</h4>
 
     <p>The <b>vertical</b> attribute changes the layout of the tabs menu by putting it to the left instead of the top of the tab group.</p>
 
     {{ example(template=verticalExample, about="Vertical tabs menu") }}
 
-    <h4>Centered (z-tab-group)</h4>
+    <h4 id="attributes-centered">Centered (z-tab-group)</h4>
 
     <p>The <b>centered</b> attribute changes the layout of the tabs menu by making it centered (horizontaly or verticaly)</p>
 
     {{ example(template=centeredExample, about="Centered tab menu") }}
 
-    <h4>Label (z-tab)</h4>
+    <h4 id="attributes-label">Label (z-tab)</h4>
 
     <p>The <b>label</b> attribute is used to build the menu and provides a clickable button to show the corresponding tab.</p>
 
     <hr>
-    <h3>Accessibility</h3>
+    <h3 id="accessibility">Accessibility</h3>
 
     <p>Soon...</p>
 
     <hr>
-    <h3>Events</h3>
+    <h3 id="events">Events</h3>
 
     <p>Soon...</p>
 </div>
