--- a/src/html/pages/textarea.njk
+++ b/src/html/pages/textarea.njk
@@ -33,34 +33,34 @@
     {{ example(template='<z-textarea label="Textarea"></z-textarea>', about="basic textarea") }}
 
     <hr>
-    <h3>Attributes</h3>
+    <h3 id="attributes">Attributes</h3>
 
-    <h4>Value</h4>
+    <h4 id="attributes-value">Value</h4>
 
     <p>The <b>value</b> attribute is watched and will change as the textarea value changes.</p>
     <p>This attribute can also be used for setting a default value to the component.</p>
 
     {{ example(template='<z-textarea label="Textarea with default value" value="default value"></z-textarea>', about="Textarea with default value") }}
 
-    <h4>Required</h4>
+    <h4 id="attributes-required">Required</h4>
 
     <p>The <b>required</b> attribute makes the textarea color turn <b style="color: var(--z-danger-color);">red</b> if no value is set.</p>
 
     {{ example(template=requiredExample, about="Textarea required") }}
 
-    <h4>Disabled</h4>
+    <h4 id="attributes-disabled">Disabled</h4>
 
     <p>The <b>disabled</b> attribute prevents the textarea from being used and gives it an understandable styling.</p>
 
     {{ example(template=disabledExample, about="Textarea disabled") }}
 
-    <h4>Readonly</h4>
+    <h4 id="attributes-readonly">Readonly</h4>
 
     <p>The <b>readonly</b> attribute prevents the textarea value from being changed without changing its styling.</p>
 
     {{ example(template=readonlyExample, about="Textarea readonly") }}
 
-    <h4>Autoresize</h4>
+    <h4 id="attributes-autoresize">Autoresize</h4>
 
     <p>The <b>autoresize</b> attribute makes the height of the textarea always the size of the text.</p>
     
@@ -73,4 +73,14 @@
     </div>
 
     {{ example(template=autoresizeExample, about="Textarea with autoresize") }}
+
+    <hr>
+    <h3 id="accessibility">Accessibility</h3>
+
+    <p>Soon...</p>
+
+    <hr>
+    <h3 id="events">Events</h3>
+
+    <p>Soon...</p>
 </div>
