--- a/src/html/pages/checkbox.njk
+++ b/src/html/pages/checkbox.njk
@@ -18,30 +18,40 @@
     {{ example(template='<z-checkbox label="checkbox input"></z-checkbox>', about="checkbox input") }}
 
     <hr>
-    <h3>Attributes</h3>
+    <h3 id="attributes">Attributes</h3>
 
-    <h4>Label</h4>
+    <h4 id="attributes-label">Label</h4>
 
     <p>The <b>label</b> attribute provides a clickable label for the <code>{{ '<z-checkbox>' | escape }}</code> component.</p>
 
     {{ example(template='<z-checkbox label="checkbox input"></z-checkbox>', about="checkbox input label") }}
 
-    <h4>Right</h4>
+    <h4 id="attributes-right">Right</h4>
 
     <p>The <b>right</b> attribute makes the <code>{{ '<z-checkbox>' | escape }}</code> component appear after its label.</p>
 
     {{ example(template=rightExample, about="checkbox input after label") }}
 
-    <h4>Checked</h4>
+    <h4 id="attributes-checked">Checked</h4>
 
     <p>The <b>checked</b> attribute is watched and makes the checkbox beeing checked if provided (no value needed).</p>
     <p>This attribute can also be used for setting a default value to the component.</p>
 
     {{ example(template='<z-checkbox label="checkbox input checked" checked></z-checkbox>', about="checkbox input checked") }}
 
-    <h4>Disabled</h4>
+    <h4 id="attributes-disabled">Disabled</h4>
 
     <p>The <b>disabled</b> attribute prevents the checkbox from beeing used and gives it an understandable styling.</p>
 
     {{ example(template=disabledExample, about="checkbox input disabled") }}
+
+    <hr>
+    <h3 id="accessibility">Accessibility</h3>
+
+    <p>Soon...</p>
+
+    <hr>
+    <h3 id="events">Events</h3>
+
+    <p>Soon...</p>
 </div>
