--- a/src/html/pages/toggle.njk
+++ b/src/html/pages/toggle.njk
@@ -20,31 +20,31 @@
     <h2>Toggle</h2>
 
     <p><code>{{ '<z-toggle>' | escape }}</code> is a component that provides the same functionality as a native <code>{{ '<input type="checkbox">' | escape }}</code> enhanced with a better and unified design.</p>
-    <div class="notif success">This component has the same api that the <code>{{ '<z-checkbox>' | escape }}</code> with some additional features and a different design.</div>
+    <div class="notif success">This component has the same api than the <code>{{ '<z-checkbox>' | escape }}</code> with some additional features and a different design.</div>
 
     {{ example (template='<z-toggle label="toggle input"></z-toggle>', about="Basic toggle") }}
     
     <hr>
-    <h3>Attributes</h3>
+    <h3 id="attributes">Attributes</h3>
 
-    <h4>Label</h4>
+    <h4 id="attributes-label">Label</h4>
 
     <p>The <b>label</b> attribute provides a clickable label for the <code>{{ '<z-toggle>' | escape }}</code> component.</p>
 
-    <h4>Right</h4>
+    <h4 id="attributes-right">Right</h4>
 
     <p>The <b>right</b> attribute makes the <code>{{ '<z-toggle>' | escape }}</code> component appear after its label.</p>
 
     {{ example(template=rightExample, about="toggle input after label") }}
 
-    <h4>Active</h4>
+    <h4 id="attributes-active">Active</h4>
 
     <p>The <b>active</b> attribute is watched and makes the toggle beeing active if provided (no value needed).</p>
     <p>This attribute can also be used for setting a default value to the component.</p>
 
     {{ example(template='<z-toggle label="toggle input active" active></z-toggle>', about="toggle input active") }}
 
-    <h4>Onlabel & Offlabel</h4>
+    <h4 id="attributes-onlabel-offlabel">Onlabel & Offlabel</h4>
 
     <p>The <b>onlabel</b> and <b>offlabel</b> attributes add little labels inside the <code>{{ '<z-toggle>' | escape }}</code> component.</p>
 
@@ -58,9 +58,19 @@
 
     {{ example(template=labelsExample, about="toggle input with custom inside labels") }}
 
-    <h4>Disabled</h4>
+    <h4 id="attributes-disabled">Disabled</h4>
 
     <p>The <b>disabled</b> attribute prevents the toggle from beeing used and gives it an understandable styling.</p>
 
     {{ example(template=disabledExample, about="toggle input disabled") }}
+
+    <hr>
+    <h3 id="accessibility">Accessibility</h3>
+
+    <p>Soon...</p>
+
+    <hr>
+    <h3 id="events">Events</h3>
+
+    <p>Soon...</p>
 </div>
