Add docs for input accessibility and events

--- a/src/html/pages/input.njk
+++ b/src/html/pages/input.njk
@@ -31,6 +31,20 @@
 <z-input label="Text input readonly" value="default value" readonly></z-input>
 {% endset %}
 
+{% set changeEventExample %}
+<z-input id="change-event-input" label="Text input with z-change event"></z-input>
+<p>Result: <b id="change-event-result"></b></p>
+
+<script>
+    const $input = document.querySelector('#change-event-input')
+    const $result = document.querySelector('#change-event-result')
+
+    $input.addEventListener('z-change', ({ detail }) => {
+        $result.innerText = detail.value
+    })
+</script>
+{% endset %}
+
 <div class="container">
     <h2>Input</h2>
 
@@ -100,10 +114,16 @@
     <hr>
     <h3 id="accessibility">Accessibility</h3>
 
-    <p>Soon...</p>
+    <p>The <code>{{ '<z-input>' | escape }}</code> component works with the native <code>{{ '<input>' | escape }}</code> element to provide an accessible experience.</p>
 
     <hr>
     <h3 id="events">Events</h3>
 
-    <p>Soon...</p>
+    <h4 id="events-change">z-change</h4>
+
+    <p>The <b>z-change</b> event is fired whenever the value of the input changes. It is a <a href="https://developer.mozilla.org/en-US/docs/Web/API/CustomEvent/CustomEvent">CustomEvent</a>.</p>
+
+    <p>This event provides a <b>detail</b> object containing the new value of the input.</p>
+
+    {{ example(template=changeEventExample, about="z-change event") }}
 </div>
